All locals done

--- a/web/src/main/resources/what_pl_PL.properties
+++ b/web/src/main/resources/what_pl_PL.properties
@@ -59,3 +59,65 @@ addAnswer.edit=Edytuj
 addAnswer.save=Zapisz
 addAnswer.addAnother=Dodaj kolejną odpowiedź
 addAnswer.remove=Usuń odpowiedź
+addQuestion.pickUpperAnswer = Wybierz odpowiedź nadrzędną:
+addQuestion.pickAnswer = Wybierz odpowiedź
+addQuestion.question = Treść pytania:
+addQuestion.questionLevel = Poziom pytania:
+addCategoryPromo.addCatToPromotion = Dodaj kategorię do promowania.
+addCategoryPromo.typePromotionId = Podaj Id wyszukiwanej kategorii:
+addCategoryPromo.typeNameSearchedCat = Podaj nazwę wyszukiwanej kategorii:
+addCategoryPromo.addCategoryId = Dodaj kategorię o id
+adminPanel.adminPanel = Panel administratora
+adminPanel.addQuestion = Dodaj pytanie
+adminPanel.deleteOrEditQuestion = Usuń lub edytuj pytania
+adminPanel.addCatToPromotion = Dodaj kategorię do promowanych
+adminPanel.delPromoCategory = Usuń kategorię z promowanych
+adminPanel.addUser = Dodaj użytkownika
+adminPanel.reports = Raporty
+questionById.title = User details
+questionById.questionId = Pytanie ID: 
+questionById.question = Treść pytania:
+questionById.questionLevel = Poziom pytania:
+questionById.addQuestion = Dodaj pytanie
+goBack.mainPage = Strona główna
+loginWindow.info = WDYW Logowanie
+loginWindow.login = Login:
+loginWindow.logIn = Zaloguj
+loginWindow.password = Hasło:
+loginWindow.else = lub zaloguj się po przez konto Google
+loginWindow.close = Zamknij
+questionAdded.questionAdded = Dodano pytanie:
+questionAdded.level = (poziom:
+removeCategoryPromo.delete = Podaj Id kategorii do usunięcia: 
+removeCategoryPromo.deleteCategory = Usuń kategorię
+removeCategoryPromo.orPickCat = lub wybierz kategorię z listy.
+removeCategoryPromo.deleteCatId =  suń kategorię o id
+removeCategoryPromo.show = Pokaż listę
+reports.title = Raport aktywności użytkowników
+reports.show = Wyświetl raport
+reports.fullShow = Wyświetl pełen raport
+reports.name = Nazwa użytkownika
+reports.email = Email
+reports.counter = Ilość wizyt
+reports.lastVisit = Ostatnia wizyta
+reports.typeEmail = Podaj e-mail szukanego użytkownika:
+showAllQuestion.editQuestion = Edytuj pytanie
+showAllQuestion.level = (poziom:
+showAllQuestion.del = Usuń
+showAllQuestion.edit = Edutuj
+updateAll.questionInfo = Treść pytania:
+updateAll.questionLevel = Poziom pytania:
+updateAll.upperAnswer = Odpowiedź nadrzędna:
+updateAll.pickNewUpperAnswer = Wybierz nową odpowiedź nadrzędną: 
+updateAll.pickAnswer = Wybierz odpowiedź 
+updateAll.answer = Odpowiedź:
+updateAll.category = Kategoria:
+updateAll.link = Link Allegro:
+updateAll.saveChanges = Zapisz zmiany
+updateAll.delPicked= Usuń zaznaczoną odpowiedź
+updateAll.addAnother = Dodaj kolejną odpowiedź
+updateAll.cancel = Anuluj
+updateQuestion.saveAndGo = Zapisz i przejdź do odpowiedzi
+updateQuestion.saveAndEdit = Zapisz i edytuj odpowiedzi
+userAdded.userAdded = Dodano użytkownika
+userAdded.email = email:
