--- a/web/src/main/resources/what_en_GB.properties
+++ b/web/src/main/resources/what_en_GB.properties
@@ -59,3 +59,66 @@ addAnswer.edit=Edit
 addAnswer.save=Save
 addAnswer.addAnother=Add another answer
 addAnswer.remove=Delete answer
+
+addQuestion.pickUpperAnswer = Pick superior answer:
+addQuestion.pickAnswer = Pick answer
+addQuestion.question = Question content:
+addQuestion.questionLevel = Question level:
+addCategoryPromo.addCatToPromotion = Add category to promotion.
+addCategoryPromo.typePromotionId = Type wanted category Id:
+addCategoryPromo.typeNameSearchedCat = Type wanted category name:
+addCategoryPromo.addCategoryId = Add category with ID
+adminPanel.adminPanel = Control Panel
+adminPanel.addQuestion = Add Question
+adminPanel.deleteOrEditQuestion = Delete or edit question
+adminPanel.addCatToPromotion = Add category to promote
+adminPanel.delPromoCategory = Delete promote category
+adminPanel.addUser = Add user
+adminPanel.reports = Reports
+questionById.title = User details
+questionById.questionId = Question ID: 
+questionById.question = Question content:
+questionById.questionLevel = Question level:
+questionById.addQuestion = Add question
+goBack.mainPage = Main page
+loginWindow.info = WDYW Login Panel
+loginWindow.login = Login:
+loginWindow.logIn = Log in
+loginWindow.password = Password:
+loginWindow.else = or login via Google account.
+loginWindow.close = Close
+questionAdded.questionAdded = Question added:
+questionAdded.level = (level:
+removeCategoryPromo.delete = Put in category ID to delete: 
+removeCategoryPromo.deleteCategory = Delete category
+removeCategoryPromo.orPickCat = or pick category from list.
+removeCategoryPromo.deleteCatId =  Delete category with ID:
+removeCategoryPromo.show = Show list
+reports.title = Report user activity
+reports.show = Show report
+reports.fullShow = Show full report
+reports.name = User Login
+reports.email = Email
+reports.counter = visit encounter
+reports.lastVisit = last visit
+reports.typeEmail = type wanted user E-mail:
+showAllQuestion.editQuestion = Edit question
+showAllQuestion.level = (level:
+showAllQuestion.del = Delete
+showAllQuestion.edit = Edit
+updateAll.questionInfo = Question content:
+updateAll.questionLevel = Question level:
+updateAll.upperAnswer = Superior answer:
+updateAll.pickNewUpperAnswer = Pick new superior answer: 
+updateAll.pickAnswer = Pick answer
+updateAll.answer = Answer:
+updateAll.category = Category:
+updateAll.link = Allegro link:
+updateAll.saveChanges = Save changes
+updateAll.delPicked= Delete selected answer
+updateAll.addAnother = Add another answer
+updateAll.cancel = Cancel
+updateQuestion.saveAndGo = Save and go to answer
+updateQuestion.saveAndEdit = Save and edit answer
+userAdded.userAdded = User added
+userAdded.email = e-mail:
