All locals done with PL marks

--- a/web/src/main/resources/what_pl_PL.properties
+++ b/web/src/main/resources/what_pl_PL.properties
@@ -1,123 +1,123 @@
 all.mainName=What Do You Want
 links.barcodeDetails=Pobierz dane o produkcie na podstawie kodu kreskowego.
 links.barcode=Kod kreskowy
-links.helperDetails=Odpowiedz na kilka pytań aby wybrać najlepszą kategorię produktów.
+links.helperDetails=Odpowiedz na kilka pyta\u0144 aby wybra\u0107 najlepsz\u0105 kategori\u0119 produkt\u00f3w.
 links.helper=Pomocnik zakupowy
-links.phraseDetails=Wyszukaj interesującą cię kategorię produktow.
+links.phraseDetails=Wyszukaj interesuj\u0105c\u0105 ci\u0119 kategori\u0119 produktow.
 links.phrase=Wyszukiwarka Allegro
-links.categoriesDetails=Znajdź interesującą cię kategorię Allegro.
+links.categoriesDetails=Znajd\u017a interesuj\u0105c\u0105 ci\u0119 kategori\u0119 Allegro.
 links.categories=Kategorie Allegro
 home.mainName=What Do You Want
 home.barcode=Kod kreskowy
 home.helper=Pomocnik zakupowy
-home.phraseFinder=Wyszukiwarka po słowie
+home.phraseFinder=Wyszukiwarka po s\u0142owie
 home.categories=Kategorie Allegro
 home.adminPanel=Panel administratora
 home.logoutButton=Wyloguj
 home.loggedUser=Zalogowany:
 home.welcomeInfo=Witamy w aplikacji What Do You Want
-home.detailInfo=Aplikacja została stworzona na potrzeby projektu grupowego, w ramach kursu Junior Java Developer. Co możesz zrobić za pomocą naszej aplikacji:
+home.detailInfo=Aplikacja zosta\u0142a stworzona na potrzeby projektu grupowego, w ramach kursu Junior Java Developer. Co mo\u017cesz zrobi\u0107 za pomoc\u0105 naszej aplikacji:
 home.listDetails1=Rozpoznasz produkt po kodzie kreskowym
-home.listDetails2=Pomożemy Ci znaleźć idealny produkt
-home.listDetails3=Szybko wyszukasz interesującą Cię kategorię Allegro 
+home.listDetails2=Pomo\u017cemy Ci znale\u017a\u0107 idealny produkt
+home.listDetails3=Szybko wyszukasz interesuj\u0105c\u0105 Ci\u0119 kategori\u0119 Allegro 
 home.listDetails4=Szybko przejrzysz kategorie Allegro
 home.login=Login
-home.password=Hasło
-home.loginButton=Zaloguj się
-barcode.mainInfo=Wskaż plik z kodem kreskowym produktu
+home.password=Has\u0142o
+home.loginButton=Zaloguj si\u0119
+barcode.mainInfo=Wska\u017c plik z kodem kreskowym produktu
 barcode.file=Plik
 barcode.chooseFileButton=Wybierz plik
 barcode.choosefileNoFileInfo=Brak wybranego pliku
-barcode.sendFileButton=Wyślij plik
-barcode.errorMsg=Wystąpił problem: Podano pustą nazwę pliku z kodem kreskowym
-helper.mainInfo=Wybór kategorii na podstawie pytań
+barcode.sendFileButton=Wy\u015blij plik
+barcode.errorMsg=Wyst\u0105pi\u0142 problem: Podano pust\u0105 nazw\u0119 pliku z kodem kreskowym
+helper.mainInfo=Wyb\u00f3r kategorii na podstawie pyta\u0144
 helper.buttonNext=Dalej
-helper.warningInfo=Musisz zaznaczyć odpowiedź!
+helper.warningInfo=Musisz zaznaczy\u0107 odpowied\u017a!
 helper.answerCategories=Twoja kategoria to: 
-helper.question=Czy chcesz dalej szukać?
+helper.question=Czy chcesz dalej szuka\u0107?
 helper.answerAllFoundCategories=Wszystkie wyszukane kategorie:  
-phrase.mainInfo=Wyszukiwarka po słowie: 
-phrase.inputPhrase=Podaj frazę:
+phrase.mainInfo=Wyszukiwarka po s\u0142owie: 
+phrase.inputPhrase=Podaj fraz\u0119:
 phrase.inputMessagePhrase=Twoja Fraza
-phrase.inputMaxAnswer=Podaj maksymalna ilość odpowiedzi:
-phrase.inputNumberHelper=wieksza niż 0
+phrase.inputMaxAnswer=Podaj maksymalna ilo\u015b\u0107 odpowiedzi:
+phrase.inputNumberHelper=wieksza ni\u017c 0
 phrase.buttonFind=Szukaj
 phrase.category=Kategoria: 
-phrase.noCategoryError=Brak kategorii pod podaną nazwą: 
+phrase.noCategoryError=Brak kategorii pod podan\u0105 nazw\u0105: 
 categories.mainInfo=Kategorie Allegro:
-categories.redirectToAllegroCategory=Przejdź do kategorii w serwisie Allegro
-categories.redirectToAllegroService=Przejdź do serwisu Allegro
+categories.redirectToAllegroCategory=Przejd\u017a do kategorii w serwisie Allegro
+categories.redirectToAllegroService=Przejd\u017a do serwisu Allegro
 categories.category=Kategoria
-forbidden.msgContactAdmin=Nie masz uprawnień do tej opcji, skontaktuj się z administratorem.
+forbidden.msgContactAdmin=Nie masz uprawnie\u0144 do tej opcji, skontaktuj si\u0119 z administratorem.
 editMsg.question=Pytanie:
-editMsg.changed=zostało zmienione.
-addAnswer.addChange=Dodaj/zmień odpowiedzi do pytania:
+editMsg.changed=zosta\u0142o zmienione.
+addAnswer.addChange=Dodaj/zmie\u0144 odpowiedzi do pytania:
 addAnswer.category=Kategoria:
-addAnswer.answer=Odpowiedź:
+addAnswer.answer=Odpowied\u017a:
 addAnswer.link=link Allegro: 
 addAnswer.edit=Edytuj
 addAnswer.save=Zapisz
-addAnswer.addAnother=Dodaj kolejną odpowiedź
-addAnswer.remove=Usuń odpowiedź
-addQuestion.pickUpperAnswer = Wybierz odpowiedź nadrzędną:
-addQuestion.pickAnswer = Wybierz odpowiedź
-addQuestion.question = Treść pytania:
+addAnswer.addAnother=Dodaj kolejn\u0105 odpowied\u017a
+addAnswer.remove=Usu\u0144 odpowied\u017a
+addQuestion.pickUpperAnswer = Wybierz odpowied\u017a nadrz\u0119dn\u0105:
+addQuestion.pickAnswer = Wybierz odpowied\u017a
+addQuestion.question = Tre\u015b\u0107 pytania:
 addQuestion.questionLevel = Poziom pytania:
-addCategoryPromo.addCatToPromotion = Dodaj kategorię do promowania.
+addCategoryPromo.addCatToPromotion = Dodaj kategori\u0119 do promowania.
 addCategoryPromo.typePromotionId = Podaj Id wyszukiwanej kategorii:
-addCategoryPromo.typeNameSearchedCat = Podaj nazwę wyszukiwanej kategorii:
-addCategoryPromo.addCategoryId = Dodaj kategorię o id
+addCategoryPromo.typeNameSearchedCat = Podaj nazw\u0119 wyszukiwanej kategorii:
+addCategoryPromo.addCategoryId = Dodaj kategori\u0119 o id
 adminPanel.adminPanel = Panel administratora
 adminPanel.addQuestion = Dodaj pytanie
-adminPanel.deleteOrEditQuestion = Usuń lub edytuj pytania
-adminPanel.addCatToPromotion = Dodaj kategorię do promowanych
-adminPanel.delPromoCategory = Usuń kategorię z promowanych
-adminPanel.addUser = Dodaj użytkownika
+adminPanel.deleteOrEditQuestion = Usu\u0144 lub edytuj pytania
+adminPanel.addCatToPromotion = Dodaj kategori\u0119 do promowanych
+adminPanel.delPromoCategory = Usu\u0144 kategori\u0119 z promowanych
+adminPanel.addUser = Dodaj u\u017cytkownika
 adminPanel.reports = Raporty
 questionById.title = User details
 questionById.questionId = Pytanie ID: 
-questionById.question = Treść pytania:
+questionById.question = Tre\u015b\u0107 pytania:
 questionById.questionLevel = Poziom pytania:
 questionById.addQuestion = Dodaj pytanie
-goBack.mainPage = Strona główna
+goBack.mainPage = Strona g\u0142\u00f3wna
 loginWindow.info = WDYW Logowanie
 loginWindow.login = Login:
 loginWindow.logIn = Zaloguj
-loginWindow.password = Hasło:
-loginWindow.else = lub zaloguj się po przez konto Google
+loginWindow.password = Has\u0142o:
+loginWindow.else = lub zaloguj si\u0119 po przez konto Google
 loginWindow.close = Zamknij
 questionAdded.questionAdded = Dodano pytanie:
 questionAdded.level = (poziom:
-removeCategoryPromo.delete = Podaj Id kategorii do usunięcia: 
-removeCategoryPromo.deleteCategory = Usuń kategorię
-removeCategoryPromo.orPickCat = lub wybierz kategorię z listy.
-removeCategoryPromo.deleteCatId =  suń kategorię o id
-removeCategoryPromo.show = Pokaż listę
-reports.title = Raport aktywności użytkowników
-reports.show = Wyświetl raport
-reports.fullShow = Wyświetl pełen raport
-reports.name = Nazwa użytkownika
+removeCategoryPromo.delete = Podaj Id kategorii do usuni\u0119cia: 
+removeCategoryPromo.deleteCategory = Usu\u0144 kategori\u0119
+removeCategoryPromo.orPickCat = lub wybierz kategori\u0119 z listy.
+removeCategoryPromo.deleteCatId =  su\u0144 kategori\u0119 o id
+removeCategoryPromo.show = Poka\u017c list\u0119
+reports.title = Raport aktywno\u015bci u\u017cytkownik\u00f3w
+reports.show = Wy\u015bwietl raport
+reports.fullShow = Wy\u015bwietl pe\u0142en raport
+reports.name = Nazwa u\u017cytkownika
 reports.email = Email
-reports.counter = Ilość wizyt
+reports.counter = Ilo\u015b\u0107 wizyt
 reports.lastVisit = Ostatnia wizyta
-reports.typeEmail = Podaj e-mail szukanego użytkownika:
+reports.typeEmail = Podaj e-mail szukanego u\u017cytkownika:
 showAllQuestion.editQuestion = Edytuj pytanie
 showAllQuestion.level = (poziom:
-showAllQuestion.del = Usuń
+showAllQuestion.del = Usu\u0144
 showAllQuestion.edit = Edutuj
-updateAll.questionInfo = Treść pytania:
+updateAll.questionInfo = Tre\u015b\u0107 pytania:
 updateAll.questionLevel = Poziom pytania:
-updateAll.upperAnswer = Odpowiedź nadrzędna:
-updateAll.pickNewUpperAnswer = Wybierz nową odpowiedź nadrzędną: 
-updateAll.pickAnswer = Wybierz odpowiedź 
-updateAll.answer = Odpowiedź:
+updateAll.upperAnswer = Odpowied\u017a nadrz\u0119dna:
+updateAll.pickNewUpperAnswer = Wybierz now\u0105 odpowied\u017a nadrz\u0119dn\u0105: 
+updateAll.pickAnswer = Wybierz odpowied\u017a 
+updateAll.answer = Odpowied\u017a:
 updateAll.category = Kategoria:
 updateAll.link = Link Allegro:
 updateAll.saveChanges = Zapisz zmiany
-updateAll.delPicked= Usuń zaznaczoną odpowiedź
-updateAll.addAnother = Dodaj kolejną odpowiedź
+updateAll.delPicked= Usu\u0144 zaznaczon\u0105 odpowied\u017a
+updateAll.addAnother = Dodaj kolejn\u0105 odpowied\u017a
 updateAll.cancel = Anuluj
-updateQuestion.saveAndGo = Zapisz i przejdź do odpowiedzi
+updateQuestion.saveAndGo = Zapisz i przejd\u017a do odpowiedzi
 updateQuestion.saveAndEdit = Zapisz i edytuj odpowiedzi
-userAdded.userAdded = Dodano użytkownika
+userAdded.userAdded = Dodano u\u017cytkownika
 userAdded.email = email:
