--- a/web/src/main/resources/what_pl_PL.properties
+++ b/web/src/main/resources/what_pl_PL.properties
@@ -91,7 +91,7 @@ questionAdded.level = (poziom:
 removeCategoryPromo.delete = Podaj Id kategorii do usuni\u0119cia: 
 removeCategoryPromo.deleteCategory = Usu\u0144 kategori\u0119
 removeCategoryPromo.orPickCat = lub wybierz kategori\u0119 z listy.
-removeCategoryPromo.deleteCatId =  su\u0144 kategori\u0119 o id
+removeCategoryPromo.deleteCatId =  Usu\u0144 kategori\u0119 o id
 removeCategoryPromo.show = Poka\u017c list\u0119
 reports.title = Raport aktywno\u015bci u\u017cytkownik\u00f3w
 reports.show = Wy\u015bwietl raport
