--- a/web/src/main/resources/what_en_GB.properties
+++ b/web/src/main/resources/what_en_GB.properties
@@ -67,7 +67,7 @@ addQuestion.questionLevel = Question level:
 addCategoryPromo.addCatToPromotion = Add category to promotion.
 addCategoryPromo.typePromotionId = Type wanted category Id:
 addCategoryPromo.typeNameSearchedCat = Type wanted category name:
-addCategoryPromo.addCategoryId = Add category with ID
+addCategoryPromo.addCategoryId = Add category
 adminPanel.adminPanel = Control Panel
 adminPanel.addQuestion = Add Question
 adminPanel.deleteOrEditQuestion = Delete or edit question
@@ -92,7 +92,7 @@ questionAdded.level = (level:
 removeCategoryPromo.delete = Put in category ID to delete: 
 removeCategoryPromo.deleteCategory = Delete category
 removeCategoryPromo.orPickCat = or pick category from list.
-removeCategoryPromo.deleteCatId =  Delete category with ID:
+removeCategoryPromo.deleteCatId =  Delete category
 removeCategoryPromo.show = Show list
 reports.title = Report user activity
 reports.show = Show report
