--- a/web/src/main/resources/what_en_GB.properties
+++ b/web/src/main/resources/what_en_GB.properties
@@ -48,7 +48,7 @@ categories.mainInfo=Allegro Categories:
 categories.redirectToAllegroCategory=Redirect to Allegro category
 categories.redirectToAllegroService=Redirect to Allegro service
 categories.category=Category
-forbidden.msgContactAdmin=Not enaugh powers, call administrator!
+forbidden.msgContactAdmin = We encountered a problems. Please try later.
 editMsg.question=Question: 
 editMsg.changed=has been changed.
 addAnswer.addChange=Add/Change answers to question:
@@ -96,7 +96,7 @@ removeCategoryPromo.deleteCatId =  Delete category
 removeCategoryPromo.show = Show list
 reports.title = Report user activity
 reports.show = Show report
-reports.fullShow = Show full report
+reports.showFull = Show full report
 reports.name = User Login
 reports.email = Email
 reports.counter = visit encounter
