--- a/web/src/main/resources/what_pl_PL.properties
+++ b/web/src/main/resources/what_pl_PL.properties
@@ -95,7 +95,7 @@ removeCategoryPromo.deleteCatId =  Usu\u0144 kategori\u0119
 removeCategoryPromo.show = Poka\u017c list\u0119
 reports.title = Raport aktywno\u015bci u\u017cytkownik\u00f3w
 reports.show = Wy\u015bwietl raport
-reports.fullShow = Wy\u015bwietl pe\u0142en raport
+reports.showFull = Wy\u015bwietl pe\u0142en raport
 reports.name = Nazwa u\u017cytkownika
 reports.email = Email
 reports.counter = Ilo\u015b\u0107 wizyt
