phrase finder opens in new page

--- a/web/src/main/resources/what_en_GB.properties
+++ b/web/src/main/resources/what_en_GB.properties
@@ -7,7 +7,7 @@ links.phraseDetails=Pick most accurate category by phrase.
 links.phrase=Phrase Finder
 links.categoriesDetails=Search for the most interesting category.
 links.categories=Allegro categories
-home.mainName=What Do You Want IZI INGLISZ
+home.mainName=What Do You Want
 home.barcode=Barcode
 home.helper=Helper
 home.phraseFinder=Phrase finder
@@ -122,3 +122,4 @@ updateQuestion.saveAndGo = Save and go to answer
 updateQuestion.saveAndEdit = Save and edit answer
 userAdded.userAdded = User added
 userAdded.email = e-mail:
+reports.orShowFullReport = Or show full report
