--- a/web/src/main/resources/what_pl_PL.properties
+++ b/web/src/main/resources/what_pl_PL.properties
@@ -121,3 +121,4 @@ updateQuestion.saveAndGo = Zapisz i przejd\u017a do odpowiedzi
 updateQuestion.saveAndEdit = Zapisz i edytuj odpowiedzi
 userAdded.userAdded = Dodano u\u017cytkownika
 userAdded.email = email:
+reports.orShowFullReport = Wy\u015bwietl pe\u0142en raport
